Fix table spaxing Fix overflow-x Reduce parallax image size

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -15,6 +15,7 @@
 	font-family: 'Roboto', sans-serif;
 	font-size: 100%;
 	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .landing .landing-wrapper {
@@ -188,7 +189,7 @@
 }
 
 .landing td{
-	padding: 16px 0;
+	padding: 16px 8px 16px 0;
 }
 
 /* Animations */
